# wasm-lab

./: .gitignore  CLAUDE.md  README.md
jco-wasi-http-testkit/: Makefile  README.md
jco-wasi-http-testkit/guest/: Cargo.toml
jco-wasi-http-testkit/guest/src/: lib.rs
jco-wasi-http-testkit/guest/wit/: world.wit
jco-wasi-http-testkit/host/: package.json  test.js
node-jco-component-text-record/: .gitignore  Makefile  README.md
node-jco-component-text-record/guest/: Cargo.toml
node-jco-component-text-record/guest/src/: lib.rs
node-jco-component-text-record/host/: main.js  package.json
node-jco-html/: .gitignore  Makefile  README.md
node-jco-html/guest/: Cargo.toml
node-jco-html/guest/src/: lib.rs
node-jco-html/guest/wit/: world.wit
node-jco-html/host/: main.js  package.json
wasi-preview3-probe/: .gitignore  Makefile  README.md
wasi-preview3-probe/probes/error-context/: Cargo.toml
wasi-preview3-probe/probes/error-context/src/: lib.rs
wasi-preview3-probe/probes/error-context/wit/: world.wit
wasi-preview3-probe/probes/future-simple/: Cargo.toml
wasi-preview3-probe/probes/future-simple/src/: lib.rs
wasi-preview3-probe/probes/future-simple/wit/: world.wit
wasi-preview3-probe/probes/stream-bytes/: Cargo.toml
wasi-preview3-probe/probes/stream-bytes/wit/: world.wit
wasmtime-cli/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
wasmtime-cli/guest/: go.mod  main.go
wasmtime-component-probe/: .gitignore  go.mod  main.go
wasmtime-go-component-check/: Makefile  README.md  go.mod  main.go
wasmtime-go-component-check/guest/: Cargo.toml
wasmtime-go-component-check/guest/src/: lib.rs
wasmtime-go-component-check/guest/wit/: world.wit
wasmtime-go-component-text-record/: .gitignore  Makefile  README.md  go.mod  main.go
wasmtime-go-component-text-record/guest/wit/: world.wit
wazero-cli/: .gitignore  Makefile  README.md  go.mod  main.go
wazero-cli/guest/: go.mod
wazero-string/: .gitignore  Makefile  README.md  go.mod  main.go
wazero-string/guest/: go.mod  main.go
