[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.39", features = ["bitflags"] }

[package.metadata.component]
package = "local:calculator"

[package.metadata.component.target]
path = "wit"
world = "calculator"
