[package]
name = "p3-future-simple"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags", "async"] }

[package.metadata.component]
package = "local:p3-future-simple"

[package.metadata.component.target]
path = "wit"
world = "prober"
